src/ui/snapshots/starcord__ui__frames__chat-spoiler-hidden-100x30.snap
---
source: src/ui/frames.rs
expression: hidden.clone()
---
╔═ servers ════════════════════════════════════════════════════════════════════════════════════════╗
║                                                                                         settings ║
║• First Guild (2)                                                                                 ║
╚══════════════════════════════════════════════════════════════════════════════════════════════════╝
╔═ channels · First Guild ═════════════════════════════════════════════════════════════════════════╗
║                                                                                         settings ║
║# general (2)                                                                                     ║
╚══════════════════════════════════════════════════════════════════════════════════════════════════╝
╔═ #general · First Guild ═════════════════════════════════════════════════════════════════════════╗
║                                                                           search  pins  settings ║
║▕ Jordan  09:05                                                                                   ║
║▕ @Sam the answer is ▒▒▒▒▒▒▒▒▒ if you want it                                                     ║
║  Alex  09:10                                                                                     ║
║  the picture I took                                                                              ║
║  [image 1024x768 harbour.png]                                                                    ║
║  Jordan  09:15                                                                                   ║
║  https://example.invalid/page                                                                    █
║  │ A page title                                                                                  █
║  │ Two sentences of description, as a link unfurl carries. The                                   █
║  │ second is there so the wrapping has something to do.                                          ║
╚══════════════════════════════════════════════════════════════════════════════════════════════════╝
╔═ compose ════════════════════════════════════════════════════════════════════════════════════════╗
║                                                                               attach  emoji  gif ║
║message #general · First Guild                                                                    ║
╚══════════════════════════════════════════════════════════════════════════════════════════════════╝
╔═ members ════════════════════════════════════════════════════════════════════════════════════════╗
║                                                                                         settings ║
║2 online · 1 idle · 1 offline                                                                     ║
╚══════════════════════════════════════════════════════════════════════════════════════════════════╝
? help  #general · First Guild                           chat  ↓ 1 new  7 unread · @3  ▲ online  off
