src/ui/snapshots/starcord__ui__frames__chat-spoiler-shown-100x30.snap
---
source: src/ui/frames.rs
expression: shown.clone()
---
┌──────┐┌═ First Guild ═─────────┐┌═ #general · First Guild ═──────────────┐┌═ members ═───────────┐
│      ││        settings  close ││            search  pins  zen  settings ││      settings  close │
│@    1││# rules                 ││───────────── new messages ─────────────││REGULARS — 2          │
│FG   2││▾ TEXT CHANNELS         ││ ╭ ↩ @Alex: the first thing anybody sa… ││● Alex                │
│SG   •││  # general (2)         ││  Alex  09:00                           ││● Jo                  │
│··    ││  # random              ││  yes, that one                         ││ONLINE — 1            │
│      ││  ! announcements       ││  [👍  3] [:pepe: 1]                     ││● Sam                 │
│      ││▾ ARCHIVE               ││▕ Jordan  09:05                         ││OFFLINE — 1           │
│      ││  # old-decisions       ││▕ @Sam the answer is forty two if you   ││● Robin               │
│      ││                        ││▕ want it                               ││                      │
│      ││                        ││  Alex  09:10                           ││                      │
│      ││                        ││  the picture I took                    ▐│                      │
│      ││                        ││  [image 1024x768 harbour.png]          ▐│                      │
│      ││                        ││  Jordan  09:15                         ▐│                      │
│      ││                        ││  https://example.invalid/page          ▐│                      │
│      ││                        ││  │ A page title                        ▐│                      │
│      │└────────────────────────┘│  │ Two sentences of description, as a  ▐│                      │
│      │┌═ messages ═────────────┐│  │ link unfurl carries. The second is  ▐│                      │
│      ││         friends  close ││  │ there so the wrapping has something ▐│                      │
│      ││○ Wren of the Long Displ││  │ to do.                              ▐│                      │
│      ││○ Alex, Jordan [3]      ││  Alex  09:20                           ▐│                      │
│      ││● Alex (1)              ││  https://tenor.invalid/view/a-cat-1234 ▐│                      │
│      ││                        ││  5                                     ▐│                      │
│      ││                        ││  [gif ▶ a cat, falling over]           ▐│                      │
│      ││                        │└────────────────────────────────────────┘│                      │
│      ││                        │┌═ compose ═─────────────────────────────┐│                      │
│      ││                        ││                     attach  emoji  gif ││                      │
│      ││                        ││message #general · First Guild          ││                      │
└──────┘└────────────────────────┘└────────────────────────────────────────┘└──────────────────────┘
? help  #general · First Guild                                    chat  6 unread · @3  ▲ online  off
