src/ui/snapshots/starcord__ui__frames__chat-top-terminal-100x30.snap
---
source: src/ui/frames.rs
expression: "render(&mut app, 100, 30)"
---
╔═ servers ════════════════════════════════════════════════════════════════════════════════════════╗
║                                                                                         settings ║
║• First Guild (2)                                                                                 ║
╚══════════════════════════════════════════════════════════════════════════════════════════════════╝
╔═ channels · First Guild ═════════════════════════════════════════════════════════════════════════╗
║                                                                                         settings ║
║# general (2)                                                                                     ║
╚══════════════════════════════════════════════════════════════════════════════════════════════════╝
╔═ #general · First Guild ═════════════════════════════════════════════════════════════════════════╗
║                                                                           search  pins  settings ║
║↑ older messages                                                                                  █
║────────────────────────────────── Saturday, 12 September 2026 ───────────────────────────────────█
║▕ Alex  10:00                                                                                     █
║▕ the first thing anybody said                                                                    ║
║  and the second, half a minute later                                                             ║
║  and the third, which makes a group of three                                                     ║
║  Robin joined                                                                                    ║
║  Jordan  10:10                                                                                   ║
║  here is the thing I meant                                                                       ║
║  ▏ rust                                                                                          ║
╚══════════════════════════════════════════════════════════════════════════════════════════════════╝
╔═ compose ════════════════════════════════════════════════════════════════════════════════════════╗
║                                                                               attach  emoji  gif ║
║message #general · First Guild                                                                    ║
╚══════════════════════════════════════════════════════════════════════════════════════════════════╝
╔═ members ════════════════════════════════════════════════════════════════════════════════════════╗
║                                                                                         settings ║
║2 online · 1 idle · 1 offline                                                                     ║
╚══════════════════════════════════════════════════════════════════════════════════════════════════╝
? help  #general · First Guild                           chat  ↓ 5 new  7 unread · @3  ▲ online  off
