src/ui/snapshots/starcord__ui__frames__chat-typing-terminal-100x30.snap
---
source: src/ui/frames.rs
expression: "render(&mut app, 100, 30)"
---
┌──────┐┌═ First Guild ═─────────┐┌═ #general · First Guild ═──────────────┐┌═ members ═───────────┐
│      ││        settings  close ││            search  pins  zen  settings ││      settings  close │
│@    1││# rules                 ││ ╭ ↩ @Alex: the first thing anybody sa… ││REGULARS — 2          │
│FG   2││▾ TEXT CHANNELS         ││  Alex  09:00                           ││● Alex                │
│SG   •││  # general (2)         ││  yes, that one                         ││● Jo                  │
│··    ││  # random              ││  [👍  3] [:pepe: 1]                     ││ONLINE — 1            │
│      ││  ! announcements       ││  Jordan  09:05                         ││● Sam                 │
│      ││▾ ARCHIVE               ││  @Sam the answer is ▒▒▒▒▒▒▒▒▒ if you   ││OFFLINE — 1           │
│      ││  # old-decisions       ││  want it                               ││● Robin               │
│      ││                        ││  Alex  09:10                           ││                      │
│      ││                        ││  the picture I took                    ││                      │
│      ││                        ││  [image 1024x768 harbour.png]          ││                      │
│      ││                        ││  Jordan  09:15                         ▐│                      │
│      ││                        ││  https://example.invalid/page          ▐│                      │
│      ││                        ││  │ A page title                        ▐│                      │
│      ││                        ││  │ Two sentences of description, as a  ▐│                      │
│      │└────────────────────────┘│  │ link unfurl carries. The second is  ▐│                      │
│      │┌═ messages ═────────────┐│  │ there so the wrapping has something ▐│                      │
│      ││         friends  close ││  │ to do.                              ▐│                      │
│      ││○ Wren of the Long Displ││▕ Alex  09:20                           ▐│                      │
│      ││○ Alex, Jordan [3]      ││▕ https://tenor.invalid/view/a-cat-1234 ▐│                      │
│      ││● Alex (1)              ││▕ 5                                     ▐│                      │
│      ││                        ││▕ [gif ▶ a cat, falling over]           ▐│                      │
│      ││                        ││  Jo is typing…                         ▐│                      │
│      ││                        │└────────────────────────────────────────┘│                      │
│      ││                        │┌═ compose ═─────────────────────────────┐│                      │
│      ││                        ││                     attach  emoji  gif ││                      │
│      ││                        ││message #general · First Guild          ││                      │
└──────┘└────────────────────────┘└────────────────────────────────────────┘└──────────────────────┘
? help  #general · First Guild                                    chat  6 unread · @3  ▲ online  off
