src/ui/snapshots/starcord__ui__frames__column-home-messages-100x30.snap
---
source: src/ui/frames.rs
expression: "render(&mut app, 100, 30)"
---
╔═ S T A R / C O R D ════════════════════════════════════════════════════════════════════ servers ═╗
║                                                                                   ‹  ›  settings ║
║• Home (1)                                                                                        ║
╚══════════════════════════════════════════════════════════════════════════════════════════════════╝
╔═ MESSAGES ═══════════════════════════════════════════════════════════════════════════════════════╗
║                                                                                         settings ║
║CONVERSATIONS                                                                                     █
║○ Wren of the Long Display Name                                                                   █
║○ Alex, Jordan [3]                                                                                ║
║● Alex (1)                                                                                        ║
║ONLINE                                                                                            ║
║● Alex                                                                                            ║
║IDLE                                                                                              ║
║◑ Jordan                                                                                          ║
╚══════════════════════════════════════════════════════════════════════════════════════════════════╝
╔═ CONVERSATION — chat ════════════════════════════════════════════════════════════════════════════╗
║                                                                           search  pins  settings ║
║                                                                                                  ║
║                                         choose a channel                                         ║
║                                                                                                  ║
╚══════════════════════════════════════════════════════════════════════════════════════════════════╝
╔═ COMPOSE ════════════════════════════════════════════════════════════════════════════════════════╗
║                                                                               attach  emoji  gif ║
║open a channel to write in it                                                                     ║
╚══════════════════════════════════════════════════════════════════════════════════════════════════╝
╔═ MEMBERS ════════════════════════════════════════════════════════════════════════════════════════╗
║                                                                                         settings ║
║not loaded                                                                                        ║
╚══════════════════════════════════════════════════════════════════════════════════════════════════╝
? help                                                            chat  7 unread · @3  ▲ online  off
