src/ui/snapshots/starcord__ui__frames__column-members-expanded-100x30.snap
---
source: src/ui/frames.rs
expression: "render(&mut app, 100, 30)"
---
╔═ servers ════════════════════════════════════════════════════════════════════════════════════════╗
║                                                                                         settings ║
║• First Guild (2)                                                                                 ║
╚══════════════════════════════════════════════════════════════════════════════════════════════════╝
╔═ channels · First Guild ═════════════════════════════════════════════════════════════════════════╗
║                                                                                         settings ║
║# general (2)                                                                                     ║
╚══════════════════════════════════════════════════════════════════════════════════════════════════╝
╔═ #general · First Guild ═════════════════════════════════════════════════════════════════════════╗
║                                                                           search  pins  settings ║
║  │ second is there so the wrapping has something to do.                                          ║
║  Alex  09:20                                                                                     ║
║  https://tenor.invalid/view/a-cat-12345                                                          ║
║  [gif ▶ a cat, falling over]                                                                     █
╚══════════════════════════════════════════════════════════════════════════════════════════════════╝
╔═ compose ════════════════════════════════════════════════════════════════════════════════════════╗
║                                                                               attach  emoji  gif ║
║message #general · First Guild                                                                    ║
╚══════════════════════════════════════════════════════════════════════════════════════════════════╝
╔═ members ════════════════════════════════════════════════════════════════════════════════════════╗
║                                                                                         settings ║
║REGULARS — 2                                                                                      ║
║● Alex                                                                                            ║
║● Jo                                                                                              ║
║ONLINE — 1                                                                                        ║
║● Sam                                                                                             ║
║OFFLINE — 1                                                                                       ║
║● Robin                                                                                           ║
╚══════════════════════════════════════════════════════════════════════════════════════════════════╝
? help  #general · First Guild                                    chat  7 unread · @3  ▲ online  off
