src/ui/snapshots/starcord__ui__frames__column-mocha-100x30.snap
---
source: src/ui/frames.rs
expression: "render(&mut app, 100, 30)"
---
╔═ S T A R / C O R D ════════════════════════════════════════════════════════════════════ servers ═╗
║                                                                                   ‹  ›  settings ║
║• First Guild (2)                                                                                 ║
╚══════════════════════════════════════════════════════════════════════════════════════════════════╝
╔═ CHANNELS — First Guild ═════════════════════════════════════════════════════════════════════════╗
║                                                                                         settings ║
║# rules                                                                                           ║
║▾ TEXT CHANNELS                                                                                   ║
║  # general (2)                                                                                   ║
║  > about the deploy                                                                              ║
║  # random                                                                                        ║
║  ! announcements                                                                                 ║
║▾ ARCHIVE                                                                                         ║
║  # old-decisions                                                                                 ║
╚══════════════════════════════════════════════════════════════════════════════════════════════════╝
╔═ CONVERSATION — chat ════════════════════════════════════════════════════════════════════════════╗
║                                                                           search  pins  settings ║
║                                                                                                  ║
║                                         choose a channel                                         ║
║                                                                                                  ║
╚══════════════════════════════════════════════════════════════════════════════════════════════════╝
╔═ COMPOSE ════════════════════════════════════════════════════════════════════════════════════════╗
║                                                                               attach  emoji  gif ║
║open a channel to write in it                                                                     ║
╚══════════════════════════════════════════════════════════════════════════════════════════════════╝
╔═ MEMBERS ════════════════════════════════════════════════════════════════════════════════════════╗
║                                                                                         settings ║
║2 online · 1 idle · 1 offline                                                                     ║
╚══════════════════════════════════════════════════════════════════════════════════════════════════╝
? help                                                            chat  7 unread · @3  ▲ online  off
