src/ui/snapshots/starcord__ui__frames__column-terminal-59x30.snap
---
source: src/ui/frames.rs
expression: "render(&mut app, 59, 30)"
---















            terminal too small — 60x21 minimum
