src/ui/snapshots/starcord__ui__frames__column-terminal-60x20.snap
---
source: src/ui/frames.rs
expression: "render(&mut app, 60, 20)"
---










             terminal too small — 60x21 minimum
